Updated the logic for admin

--- a/web/armoniagesturilor/src/main/resources/templates/login.html
+++ b/web/armoniagesturilor/src/main/resources/templates/login.html
@@ -90,13 +90,13 @@
             background-color: #1565C0;
         }
         .link-button {
-            background-color: #FF7043; /* Different color for register button */
-            font-size: 14px; /* Smaller font size */
-            width: auto; /* Only as wide as necessary */
-            padding: 8px 12px; /* Smaller padding */
+            background-color: #FF7043;
+            font-size: 14px;
+            width: auto;
+            padding: 8px 12px;
         }
         .link-button:hover {
-            background-color: #FF5722; /* Darker shade for hover effect */
+            background-color: #FF5722;
         }
         .message {
             text-align: center;
@@ -132,8 +132,8 @@
 <div class="app-title">Armonia Gesturilor</div>
 <div class="navbar">
     <a href="/home">Acasă</a>
-    <a href="/discover">Descoperă</a>
-    <a href="/play">Cântă</a>
+    <a href="/descopera">Descoperă</a>
+    <a href="/canta">Cântă</a>
     <a href="/profile">Profilul meu</a>
 </div>
 <div class="container">
