--- a/web/armoniagesturilor/src/main/resources/templates/forgot-password-enter.html
+++ b/web/armoniagesturilor/src/main/resources/templates/forgot-password-enter.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Creare cont | Armonia Gesturilor</title>
+    <title>Forgot Password | Armonia Gesturilor</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/style.css">
-
 </head>
 <body>
 <div class="navbar">
@@ -51,21 +50,14 @@
 </div>
 <div class="discover-container">
     <div class="card login-card">
-        <h1>Conectare</h1>
+        <h1>Forgot Password</h1>
         <div th:if="${errorMessage != null && !errorMessage.isEmpty()}" th:text="${errorMessage}" class="message error"></div>
-        <form th:action="@{/api/v1/login}" method="post">
+        <form th:action="@{/forgot-password}" method="post">
             <div class="input-row login-row">
-                <input type="text" name="email" placeholder="Email" required>
+                <input type="email" name="email" placeholder="Introdu email-ul tău" required>
             </div>
             <div class="input-row login-row">
-                <input type="password" name="password" placeholder="Parolă" required>
-            </div>
-            <div class="input-row login-row">
-                <button class="button-33 center" type="submit">Conectare</button>
-            </div>
-            <div class="input-row login-row">
-                <a href="/registration" class="link-button center">Nu ai cont? Înregistrează-te acum!</a>
-                <a href="/forgot-password" class="link-button center">Ai uitat parola?</a>
+                <button class="button-33 center" type="submit">Schimbă parola</button>
             </div>
         </form>
     </div>
