--- a/web/armoniagesturilor/src/main/resources/templates/forgot-password-update.html
+++ b/web/armoniagesturilor/src/main/resources/templates/forgot-password-update.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Setări</title>
+    <title>Creare cont | Armonia Gesturilor</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/style.css">
+
 </head>
 <body>
 <div class="navbar">
@@ -50,48 +50,19 @@
     </div>
 </div>
 <div class="discover-container">
-    <div class="card info-card">
-        <h1>Setările contului</h1>
-        <div th:if="${success_details != null && !success_details.isEmpty()}" th:text="${success_details}" class="message success"></div>
-        <form th:action="@{/settings}" th:object="${user}" method="post">
-            <div class="input-row">
-                <label for="firstName">Prenume:</label>
-                <input type="text" id="firstName" th:field="*{firstName}" required />
+    <div class="card login-card">
+        <h1>Schimbare parolă</h1>
+        <div th:if="${errorMessage != null && !errorMessage.isEmpty()}" th:text="${errorMessage}" class="message error"></div>
+        <form method="post">
+            <div class="input-row login-row">
+                <input type="password" name="password" placeholder="Parolă" required>
             </div>
-            <div class="input-row">
-                <label for="lastName">Nume:</label>
-                <input type="text" id="lastName" th:field="*{lastName}" required />
+            <div class="input-row login-row">
+                <input type="password" name="confirmPassword" placeholder="Confirmă parola" required>
             </div>
-            <div class="input-row">
-                <label for="email">Email:</label>
-                <input type="email" id="email" th:field="*{email}" required />
+            <div class="input-row login-row">
+                <button class="button-33 center" type="submit">Schimbă</button>
             </div>
-            <div>
-                <input  class="button-33" type="submit" value="Actualizează informațiile" />
-            </div>
-        </form>
-
-        <h2>Schimbă parola</h2>
-        <div th:if="${error}" class="error-message" th:text="${error}"></div>
-        <div th:if="${success}" class="success-message" th:text="${success}"></div>
-
-        <form th:action="@{/settings/change-password}" method="post">
-            <div class="input-row">
-                <label for="currentPassword">Parola curentă:</label>
-                <input type="password" id="currentPassword" name="currentPassword" required>
-            </div>
-            <div class="input-row">
-                <label for="newPassword">Parola nouă:</label>
-                <input type="password" id="newPassword" name="newPassword" required>
-            </div>
-            <div class="input-row">
-                <label for="confirmNewPassword">Confirmă parola nouă:</label>
-                <input type="password" id="confirmNewPassword" name="confirmNewPassword" required>
-            </div>
-            <div>
-                <input class="button-33" type="submit" value="Schimbă parola" />
-            </div>
-
         </form>
     </div>
 </div>
