--- a/web/armoniagesturilor/src/main/resources/templates/forgot-password-success.html
+++ b/web/armoniagesturilor/src/main/resources/templates/forgot-password-success.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Creare cont | Armonia Gesturilor</title>
+    <title>Password Successfully Changed | Armonia Gesturilor</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/style.css">
-
 </head>
 <body>
 <div class="navbar">
@@ -51,23 +50,11 @@
 </div>
 <div class="discover-container">
     <div class="card login-card">
-        <h1>Conectare</h1>
-        <div th:if="${errorMessage != null && !errorMessage.isEmpty()}" th:text="${errorMessage}" class="message error"></div>
-        <form th:action="@{/api/v1/login}" method="post">
-            <div class="input-row login-row">
-                <input type="text" name="email" placeholder="Email" required>
-            </div>
-            <div class="input-row login-row">
-                <input type="password" name="password" placeholder="Parolă" required>
-            </div>
-            <div class="input-row login-row">
-                <button class="button-33 center" type="submit">Conectare</button>
-            </div>
-            <div class="input-row login-row">
-                <a href="/registration" class="link-button center">Nu ai cont? Înregistrează-te acum!</a>
-                <a href="/forgot-password" class="link-button center">Ai uitat parola?</a>
-            </div>
-        </form>
+        <h1>Parolă schimbată cu succes!</h1>
+        <div class="message success">Parola ta a fost schimbată. Acum poți folosi noua parolă pentru conectare.</div>
+        <div class="input-row login-row">
+            <button class="button-33 center" onclick="location.href='/login'">Conctează-te</button>
+        </div>
     </div>
 </div>
 </body>
