--- a/web/armoniagesturilor/src/main/resources/static/player.css
+++ b/web/armoniagesturilor/src/main/resources/static/player.css
@@ -7,6 +7,12 @@
     width: 40px;
     height: 40px;
     float: left;
+    opacity: 0.7;
+    transform: scale(1);
+}
+.audio-player-container button:hover{
+    opacity: 1;
+    transform: scale(1.2);
 }
 .audio-player-container {
     --seek-before-width: 0%;
@@ -15,8 +21,7 @@
     position: relative;
     width: 95%;
     max-width: 500px;
-    height: 132px;
-    background: #fff;
+    margin: 0 auto;
 }
 .audio-player-container::before {
     position: absolute;
@@ -29,19 +34,16 @@
     z-index: -1;
 }
 p {
-    position: absolute;
-    top: -18px;
-    right: 5%;
     padding: 0 5px;
     margin: 0;
     font-size: 28px;
-    background: #fff;
+    margin-top: 10px;
 }
 #play-icon {
     margin: 20px 2.5% 10px 2.5%;
 }
 path {
-    stroke: #007db5;
+    stroke: #000;
 }
 .time {
     display: inline-block;
@@ -65,10 +67,10 @@ output {
     width: 58%;
 }
 #volume-slider::-webkit-slider-runnable-track {
-    background: rgba(0, 125, 181, 0.6);
+    background:rgb(29, 209, 185) 100.2%;
 }
 #volume-slider::-moz-range-track {
-    background: rgba(0, 125, 181, 0.6);
+    background: red;
 }
 #volume-slider::-ms-fill-upper {
     background: rgba(0, 125, 181, 0.6);
