--- a/web/armoniagesturilor/src/main/resources/static/style.css
+++ b/web/armoniagesturilor/src/main/resources/static/style.css
@@ -457,7 +457,7 @@ body {
     display: flex;
     color: black;
     justify-content: center;
-    position: relative;
+    /*position: relative;*/
     flex-direction: column;
     transition: all 0.3s ease-in-out;
     overflow: hidden;
@@ -558,10 +558,10 @@ body {
 }
 .hello-card{
     max-width: 50%;
-    margin: 20px auto;
+    margin: 50px auto;
 }
 .sing-container{
-    max-width: 600px!important;
+    width: 60% !important;
 }
 .slide-container {
     position: relative;
@@ -569,6 +569,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    width: 100%;
 }
 
 .slide-container .glass {
@@ -742,7 +743,7 @@ p{
     height: 25px;
 }
 .login-row{
-    width: 50%;
+    width: 80%;
     margin: 20px auto
 }
 .center{
@@ -752,6 +753,53 @@ p{
     width: 40%;
     margin-top:20px;
 }
+
+.width-40{
+    width: 40%;
+}
+.input-image{
+    width: 100%;
+    height: 90%;
+    margin-top: 20px;
+}
+.navbar .right .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.navbar .right .dropdown .dropbtn {
+    /*display: flex;*/
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.navbar .right .dropdown-content {
+    display: none;
+    position: absolute;
+    background: linear-gradient(#ADDCEE 50%, #F3F6F6);
+    min-width: 160px;
+    z-index: 99999;
+}
+
+.navbar .right .dropdown-content a {
+    color: black;
+    padding: 12px;
+    text-decoration: none;
+    display: block;
+    margin-right: 0px;
+}
+
+.navbar .right .dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.navbar .right .dropdown:hover .dropdown-content {
+    display: block;
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .navbar {
@@ -784,7 +832,7 @@ p{
         width: 100%!important;
     }
     .container{
-        width: 100%;
+        width: 100% !important;
         padding: 0;
         overflow: visible;
     }
@@ -802,13 +850,42 @@ p{
         width: 100%;
     }
     .card{
-        width: 100%;
+        width: 98%;
         padding: 5px;
     }
     .login-row{
         width: 100%;
     }
+    .video-input{
+        width: 100%;
+        height: 100%;
+    }
+    canvas{
+        width: 100%;
+        height: 100%;
+    }
+    .input-row{
+        margin: 10px auto;
+    }
+    .slide-container{
+        width: 100%;
+    }
+    .slide-container .glass{
+        width: 150px;
+        height: 160px;
+    }
+    .hello-card{
+        max-width: 80%;
+    }
+    .container{
+        max-height: unset;
+    }
+    body{
+        overflow: scroll;
+    }
+
 }
+
 .badge-locked{
     filter: grayscale(100%);
 }
@@ -825,4 +902,17 @@ table{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.username-display{
+    position: absolute;
+    background: rgb(255,255,255,0.4);
+    padding: 10px;
+    border-radius: 15px 0px 15px 0px;
+    margin-left:-10px;
+    margin-top:-5px;
+}
+
+.song-header{
+    position: relative;
 }
