--- a/web/armoniagesturilor/src/main/resources/templates/register.html
+++ b/web/armoniagesturilor/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
 <div class="navbar">
     <div class="left">
         <div class="logo">
-            <img src="../images/favicon.ico" width="64px" height="64px">
+            <img src="../../images/favicon.ico" width="64px" height="64px">
         </div>
         <div class="app-title">
             Armonia gesturilor
